feat: adding new envs in env example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@
 PORT=3000
 
 #DATABASE
-#host.docker.internal
 DB_HOST=
 DB_PORT=
 DB_USER=
@@ -17,3 +16,18 @@ USER_EXPIRESIN=
 #CLOUDFLARE
 CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_API_KEY=
+
+#ASAAS
+ASAAS_URL=
+ASAAS_WEBHOOK_TOKEN=
+ASAAS_AUTH=
+
+
+#INSTALLMENT_INTEREST_RATE
+INSTALLMENT_INTEREST_RATE_IN_CENTS=1000
+
+
+#MELHOR ENVIO TOKEN
+MELHOR_ENVIO_FROM=
+MELHOR_ENVIO_URL=
+MELHOR_ENVIO_TOKEN=
